<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.android.quizapp.MainActivity">

    <ScrollView
        style="@style/pre"
        android:layout_centerHorizontal="true">

        <LinearLayout
            style="@style/pre"
            android:orientation="vertical">

            <TextView
                style="@style/question_point"
                android:text="@string/question_easy" />

            <TextView
                style="@style/question"
                android:text="@string/question_1" />

            <RadioGroup
                style="@style/pre"
                android:paddingBottom="@dimen/small">

                <RadioButton
                    android:id="@+id/tubes"
                    style="@style/answer"
                    android:text="@string/answer_1_a" />

                <RadioButton
                    android:id="@+id/mtBlanc"
                    style="@style/answer"
                    android:text="@string/answer_1_b" />

                <RadioButton
                    android:id="@+id/elbrus"
                    style="@style/answer"
                    android:text="@string/answer_1_c" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <TextView
                style="@style/question_point"
                android:text="@string/question_easy" />

            <TextView
                style="@style/question"
                android:text="@string/question_2" />

            <RadioGroup
                style="@style/pre"
                android:paddingBottom="@dimen/small">

                <RadioButton
                    android:id="@+id/amazon"
                    style="@style/answer"
                    android:text="@string/answer_2_a" />

                <RadioButton
                    android:id="@+id/congo"
                    style="@style/answer"
                    android:text="@string/answer_2_b" />

                <RadioButton
                    android:id="@+id/danube"
                    style="@style/answer"
                    android:text="@string/answer_2_c" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <TextView
                style="@style/question_point"
                android:text="@string/question_medium" />

            <TextView
                style="@style/question"
                android:text="@string/question_3" />

            <RadioGroup
                style="@style/pre"
                android:paddingBottom="@dimen/small">

                <RadioButton
                    android:id="@+id/no_1"
                    style="@style/answer"
                    android:text="@string/answer_3_a" />

                <RadioButton
                    android:id="@+id/no_2"
                    style="@style/answer"
                    android:text="@string/answer_3_b" />

                <RadioButton
                    android:id="@+id/no_3"
                    style="@style/answer"
                    android:text="@string/answer_3_c" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <TextView
                style="@style/question_point"
                android:text="@string/question_medium" />

            <TextView
                style="@style/question"
                android:text="@string/question_4" />

            <RadioGroup
                style="@style/pre"
                android:paddingBottom="@dimen/small">

                <RadioButton
                    android:id="@+id/thomas"
                    style="@style/answer"
                    android:text="@string/answer_4_a" />

                <RadioButton
                    android:id="@+id/george"
                    style="@style/answer"
                    android:text="@string/answer_4_b" />

                <RadioButton
                    android:id="@+id/nicola"
                    style="@style/answer"
                    android:text="@string/answer_4_c" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <TextView
                style="@style/question_point"
                android:text="@string/question_hard" />

            <TextView
                style="@style/question"
                android:text="@string/question_5" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/picture"
                android:scaleType="fitCenter"
                android:src="@drawable/city" />

            <EditText
                android:id="@+id/city"
                style="@style/question"
                android:hint="@string/answer_5"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <TextView
                style="@style/question_point"
                android:text="@string/question_extra" />

            <TextView
                style="@style/question"
                android:text="@string/question_6" />

            <CheckBox
                android:id="@+id/bangladesh"
                style="@style/answer"
                android:text="@string/answer_6_a" />

            <CheckBox
                android:id="@+id/moldova"
                style="@style/answer"
                android:text="@string/answer_6_b" />

            <CheckBox
                android:id="@+id/georgia"
                style="@style/answer"
                android:text="@string/answer_6_c" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_small"
                android:background="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:onClick="submitQuiz"
                android:text="@string/submit" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>